--- a/hieradata/node/comcam-dc01.tu.lsst.org.yaml
+++ b/hieradata/node/comcam-dc01.tu.lsst.org.yaml
@@ -1,9 +1,4 @@
 ---
-profile::daq::daq_interface::hwaddr: "a0:36:9f:20:4a:56"
-profile::daq::daq_interface::uuid: "b3cb2632-fc6f-4698-b8f5-feea068266ed"
-profile::daq::daq_interface::was: "p2p2"
-profile::daq::daq_interface::mode: "dhcp-client"
-
 nm::connections:
   ens2f0:
     content:
@@ -15,6 +10,36 @@ nm::connections:
       ethernet: {}
       ipv4:
         method: "auto"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  ens2f1:
+    content:
+      connection:
+        id: "ens2f1"
+        uuid: "1aea73f67-58f6-4119-abd6-d9d72235297b"
+        type: "ethernet"
+        interface-name: "ens2f1"
+        master: "lsst-daq"
+        slave-type: "bridge"
+      ethernet: {}
+      ethtool:
+        ring-rx: 4096
+        ring-tx: 4096
+      bridge-port: {}
+  lsst-daq:
+    content:
+      connection:
+        id: "lsst-daq"
+        uuid: "d5642f16-7bf7-7d4d-de5a-25e7d7c355a4"
+        type: "bridge"
+        interface-name: "lsst-daq"
+      ethernet: {}
+      bridge:
+        stp: false
+      ipv4:
+        method: "auto"
+        ignore-auto-dns: true
       ipv6:
         method: "disabled"
       proxy: {}
