--- a/hieradata/site/dev.yaml
+++ b/hieradata/site/dev.yaml
@@ -1,5 +1,9 @@
 ---
 ipa::ipa_master_fqdn: "ipa1.ls.lsst.org"
+rsyslog::feature_packages:
+  - "rsyslog-elasticsearch"
+rsyslog::config::modules:
+  omelasticsearch: {}
 rsyslog::config::actions:
   graylogls:
     type: "omfwd"
@@ -8,6 +12,20 @@ rsyslog::config::actions:
       Target: "collector.ls.lsst.org"
       Port: 5514
       Protocol: "udp"
+  opensearch:
+    type: "omelasticsearch"
+    facility: "*.*"
+    config:
+      server: "opensearch.ayekan.dev.lsst.org"
+      serverport: 443
+      allowunsignedcerts: "on"  # off for prod
+      searchIndex: "rsyslog-hosts"
+      bulkmode: "on"
+      maxbytes: "100m"
+      queue.type: "linkedlist"
+      queue.size: "5000"
+      queue.dequeuebatchsize: "300"
+      action.resumeretrycount: "-1"
 # The following keys are shared between the `dhcp` and `resolv_conf` classes:
 # - dhcp::dnsdomain
 # - dhcp::nameservers
