(cluster/lsstcam-ccs) add ccs release 1.0.9

--- a/hieradata/cluster/lsstcam-ccs.yaml
+++ b/hieradata/cluster/lsstcam-ccs.yaml
@@ -104,6 +104,9 @@ ccs_software::installations:
   lsstcam-software-1.0.8:
     aliases:
       - "puppet-1.0.8"
+  lsstcam-software-1.0.9:
+    aliases:
+      - "puppet-1.0.9"
 
 daq::daqsdk::purge: false
 
