(cluster/auxtel-ccs) add ccs release 2.3.8

--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -80,6 +80,10 @@ ccs_software::installations:
     aliases:
       - "puppet-2.3.7"
 
+  ats-software-2.3.8:
+    aliases:
+      - "puppet-2.3.8"
+
 ## Used in lookups:
 ccs_site: "summit"
 ccs_instrument: "ats"
