--- a/hieradata/node/auxtel-archiver.tu.lsst.org.yaml
+++ b/hieradata/node/auxtel-archiver.tu.lsst.org.yaml
@@ -1,42 +1,50 @@
 ---
-network::interfaces_hash:
-  p3p1:  # fqdn
-    bootproto: "dhcp"
-    defroute: "yes"
-    onboot: "yes"
-    type: "Ethernet"
-  p3p2:  # misc-dds|140.252.147.128/27
-    bootproto: "none"
-    bridge: "dds"
-    defroute: "no"
-    nozeroconf: "yes"
-    onboot: "yes"
-    type: "Ethernet"
+nm::connections:
+  enp3s0f0:  #fqdn
+    content:
+      connection:
+        id: "enp3s0f0"
+        uuid: "85b915ee-f112-4112-948a-774620da8a11"
+        type: "ethernet"
+        interface-name: "enp3s0f0"
+      ethernet: {}
+      ipv4:
+        method: "auto"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  enp3s0f1:  # misc-dds|140.252.147.128/27
+    content:
+      connection:
+        id: "enp3s0f1"
+        uuid: "6c6f29f4-d85a-4e68-9c0a-b6ac15eb093f"
+        type: "ethernet"
+        interface-name: "enp3s0f1"
+        master: "dds"
+        slave-type: "bridge"
+      ethernet: {}
+      bridge-port: {}
   dds:
-    bootproto: "none"
-    ipaddress: "140.252.147.133"
-    netmask: "255.255.255.224"
-    onboot: "yes"
-    type: "bridge"
-  em1: &not_connected
-    bootproto: "none"
-    onboot: "no"
-    type: "Ethernet"
-  em2:
-    <<: *not_connected
-  em3:
-    <<: *not_connected
-  em4:
-    <<: *not_connected
-
+    content:
+      connection:
+        id: "dds"
+        uuid: "ad86a806-c4be-4e53-90d4-96629bb6cedb"
+        type: "bridge"
+        interface-name: "dds"
+      ethernet: {}
+      bridge:
+        stp: false
+      ipv4:
+        address1: "140.252.147.133/27"
+        method: "manual"
+      ipv6:
+        method: "disabled"
+      proxy: {}
 network::mroutes_hash:
   dds:
     routes:
       "140.252.147.16/28": "140.252.147.129"
       "140.252.147.48/28": "140.252.147.129"
-  p3p2:
-    ensure: "absent"
-    routes: {}
 
 nfs::server_enabled: false
 nfs::client_enabled: true
