(profile::ccs::file_transfer) remove the install parameter
Rather than including the class in ccs::common and conditionally
activating it, only include it in the roles that need it.

--- a/hieradata/role/atsdaq.yaml
+++ b/hieradata/role/atsdaq.yaml
@@ -3,9 +3,8 @@
 classes:
   - "ccs_daq"
   - "profile::ccs::common"
+  - "profile::ccs::file_transfer"
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
   - "profile::core::nfsserver"
-
-profile::ccs::file_transfer::install: true
