(profile::core::puppetdb) rm; was only needed for EL7

--- a/hieradata/role/puppetdb.yaml
+++ b/hieradata/role/puppetdb.yaml
@@ -1,7 +1,7 @@
 ---
 classes:
   - "profile::core::common"
-  - "profile::core::puppetdb"
+  - "puppetdb"
 
 puppetdb::database_listen_address: "localhost"
 puppetdb::globals::version: "7.14.0"
