--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -82,6 +82,10 @@ ccs_software::installations:
     aliases:
       - "puppet-2.3.8"
 
+  ats-software-2.3.9:
+    aliases:
+      - "puppet-2.3.9"
+
 ## Used in lookups:
 ccs_site: "summit"
 ccs_instrument: "ats"
