(profile::ccs::common) convert pkgurl_{user,pass} params to Sensitive

--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -14,6 +14,8 @@ lookup_options:
     convert_to: "Sensitive"
   '^ipa::admin_password$':
     convert_to: "Sensitive"
+  '^profile::ccs::common::pkgurl_.+$':
+    convert_to: "Sensitive"
 ccs_database::database: "comcamdbprod"
 ccs_database::password: "foo"
 foreman_proxy::plugin::dns::route53::aws_access_key: "foo"
@@ -21,6 +23,8 @@ foreman_proxy::plugin::dns::route53::aws_secret_key: "foo"
 ipa::admin_password: "foofoofoofoo"  # ipa master only
 ipa::directory_services_password: "foofoofoofoo"  # ipa master only
 ipa::domain_join_password: "foofoofoofoo"  # 8 char min
+profile::ccs::common::pkgurl_pass: "foo"
+profile::ccs::common::pkgurl_user: "foo"
 profile::ccs::file_transfer::s3daemon_env_access: "foo"
 profile::ccs::file_transfer::s3daemon_env_secret: "foo"
 profile::ccs::postfix::auth: "foo"
