--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -20,6 +20,8 @@ lookup_options:
     convert_to: "Sensitive"
   '^profile::ccs::file_transfer::secret$':
     convert_to: "Sensitive"
+  '^restic::(id|key|password)$':
+    convert_to: "Sensitive"
 ccs_database::database: "comcamdbprod"
 ccs_database::password: "foo"
 foreman_proxy::plugin::dns::route53::aws_access_key: "foo"
