--- a/hieradata/role/ccs-mcm.yaml
+++ b/hieradata/role/ccs-mcm.yaml
@@ -14,6 +14,9 @@ nginx::ssl_protocols: "TLSv1.2"
 nginx::ssl_ciphers: |
   ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
 nginx::gzip_proxied: "any"
+profile::ccs::tomcat::jars:
+  "mysql-connector-java-5.1.23.jar": "https://repo1.maven.org/maven2/mysql/mysql-connector-java/5.1.23/mysql-connector-java-5.1.23.jar"
+  "h2-1.4.191.jar": "https://repo1.maven.org/maven2/com/h2database/h2/1.4.191/h2-1.4.191.jar"
 profile::ccs::tomcat::wars:
   CCSWebTrending.war:
     war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/CCSWebTrending/2.1/CCSWebTrending-2.1.war"
