(role/ats{ccs|daq}) add ccs graphical profile

--- a/hieradata/role/atsccs.yaml
+++ b/hieradata/role/atsccs.yaml
@@ -3,6 +3,7 @@
 classes:
   - "ccs_sal"
   - "profile::ccs::common"
+  - "profile::ccs::graphical"
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
