--- a/hieradata/role/atsdaq.yaml
+++ b/hieradata/role/atsdaq.yaml
@@ -4,6 +4,7 @@ classes:
   - "ccs_daq"
   - "profile::ccs::common"
   - "profile::ccs::file_transfer"
+  - "profile::ccs::graphical"
   - "profile::core::common"
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
