(node/tang0[123].dev.lsst.org) use 'disable' for ipv6 addresses

--- a/hieradata/node/tang01.tu.lsst.org.yaml
+++ b/hieradata/node/tang01.tu.lsst.org.yaml
@@ -14,5 +14,5 @@ nm::connections:
         dns-search: "tu.lsst.org;"
         method: "manual"
       ipv6:
-        method: "ignore"
+        method: "disabled"
       proxy: {}
