--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -388,6 +388,15 @@ ipset::sets:
       - "139.229.152.128/26"  # vlan2503
       - "139.229.152.192/26"  # vlan2504
       - "139.229.154.0/26"  # vlan2507
+  cpfde:  # cps site hosts which might need FDE
+    ensure: "present"
+    type: "hash:net"
+    set:
+      - "139.229.160.0/24"  # vlan1101
+      - "139.229.161.0/27"  # vlan1102
+      - "139.229.175.128/25"  # vlan1502
+      - "139.229.175.0/26"  # vlan1510
+      - "139.229.175.64/26"  # vlan1511
 
 # sssd ipa client setup -- do not use on ipa servers
 sssd::main_config:
